fix/ prevent author component from scrolling on mobile phones

--- a/src/styles/Author.css
+++ b/src/styles/Author.css
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  overflow-y: hidden;
 }
 .logo-cnt {
   height: 100%;
